{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 406,
  "lineage": "ea6d9dc7-f460-b643-47ef-e499c7ad887b",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a68febd9b9a5403",
            "arn": "arn:aws:ec2:eu-south-1:985729960198:instance/i-0ffcc5d43d1197ab5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffcc5d43d1197ab5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0944642a552d2e3ce",
            "private_dns": "ip-172-31-24-176.eu-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.176",
            "public_dns": "ec2-15-161-57-231.eu-south-1.compute.amazonaws.com",
            "public_ip": "15.161.57.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0525ffbdf2f0c4412",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c777d4fb163ba2c0",
            "tags": {
              "name": "Production_server"
            },
            "tags_all": {
              "name": "Production_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c971a33a5dc6cef"
            ]
          }
        }
      ]
    },
    {
      "module": "module.private_subnet_one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:subnet/subnet-0c48195ff90c1017f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1b",
            "availability_zone_id": "eus1-az2",
            "cidr_block": "128.10.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c48195ff90c1017f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985729960198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "key": "aws_private_subnet",
              "name": "aws_subnet_one"
            },
            "tags_all": {
              "key": "aws_private_subnet",
              "name": "aws_subnet_one"
            },
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_two",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:subnet/subnet-058348b96d27a2a10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1c",
            "availability_zone_id": "eus1-az3",
            "cidr_block": "128.10.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058348b96d27a2a10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985729960198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "key": "aws_private_subnet",
              "name": "aws_subnet_two"
            },
            "tags_all": {
              "key": "aws_private_subnet",
              "name": "aws_subnet_two"
            },
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:subnet/subnet-037fccc8e1d98c16c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1c",
            "availability_zone_id": "eus1-az3",
            "cidr_block": "128.10.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037fccc8e1d98c16c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985729960198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "key": "aws_public_subnet",
              "name": "aws_subnet_one"
            },
            "tags_all": {
              "key": "aws_public_subnet",
              "name": "aws_subnet_one"
            },
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:subnet/subnet-0c6205137c53e2124",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1c",
            "availability_zone_id": "eus1-az3",
            "cidr_block": "128.10.24.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6205137c53e2124",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985729960198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "key": "aws_public_subnet",
              "name": "aws_subnet_two"
            },
            "tags_all": {
              "key": "aws_public_subnet",
              "name": "aws_subnet_two"
            },
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_PriSub1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:security-group/sg-09e315103267e0628",
            "description": "allow ssh anywhere to private_subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "128.10.22.0/24"
                ],
                "description": "Allow Traffic leaving it reach anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e315103267e0628",
            "ingress": [
              {
                "cidr_blocks": [
                  "128.10.22.0/24"
                ],
                "description": "Allow ssh only in and out of this subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "two",
            "name_prefix": "",
            "owner_id": "985729960198",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_PriSub2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:security-group/sg-0324f372e073990c6",
            "description": "allow http anywhere to private_subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "128.0.23.0/24"
                ],
                "description": "Allow Traffic leaving it reach anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0324f372e073990c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "128.10.23.0/24"
                ],
                "description": "Allow ssh only in and out of this subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three",
            "name_prefix": "",
            "owner_id": "985729960198",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_PubSub2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:security-group/sg-0ed726ee4712a393a",
            "description": "allow ssh anywhere to private_subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "128.10.21.0/24"
                ],
                "description": "Allow Traffic leaving it reach anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed726ee4712a393a",
            "ingress": [
              {
                "cidr_blocks": [
                  "128.10.21.0/24"
                ],
                "description": "Allow ssh only in and out of this subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "one",
            "name_prefix": "",
            "owner_id": "985729960198",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_PubSub2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:security-group/sg-0f56bee70c639658d",
            "description": "allow http and https anywhere to private_subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "128.10.24.0/24"
                ],
                "description": "Allow Traffic leaving it reach anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f56bee70c639658d",
            "ingress": [
              {
                "cidr_blocks": [
                  "128.10.24.0/24"
                ],
                "description": "Allow ssh only in and out of this subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "four",
            "name_prefix": "",
            "owner_id": "985729960198",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa8ef183c5175dac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.abayomi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "abayomi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:985729960198:vpc/vpc-0aa8ef183c5175dac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "128.10.0.0/18",
            "default_network_acl_id": "acl-0d9566c42a9776afb",
            "default_route_table_id": "rtb-00eb428037ce7b1df",
            "default_security_group_id": "sg-0c8ad88ee82a97303",
            "dhcp_options_id": "dopt-0ca4737bf4e672733",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aa8ef183c5175dac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00eb428037ce7b1df",
            "owner_id": "985729960198"
          }
        }
      ]
    }
  ]
}